--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@sanity/client": "^7.11.0",
+    "@sanity/code-input": "^6.0.1",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.6.1",
     "@sanity/visual-editing": "^3.0.4",
@@ -27,6 +28,7 @@
     "@tiptap/react": "^3.4.1",
     "@tiptap/starter-kit": "^3.4.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
