Major improvements: Revamp Work page with concrete experience, clean up home page redundancy, add Vercel build monitoring
- Complete Work page overhaul with real experience from ThriveProtocol, Sparkblox, Upland, Mode Mobile, etc.
- Remove duplicate sections from home page (ClientLogos, duplicate stats)
- Fix blog links to point to actual posts
- Add GitHub Actions workflow for build monitoring
- Add pre-push hook to catch build errors locally
- Add build status badges to README
- Create comprehensive build monitoring documentation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "tsc --noEmit",
     "verify": "npm run type-check && npm run build",
     "verify:quick": "npm run build",
+    "prebuild": "echo '🔍 Checking for issues before build...'",
+    "prepush": "npm run verify:quick",
     "setup-db": "node scripts/setup-database.js",
     "seed-db": "node scripts/populate-db-branded.mjs",
     "test": "playwright test",
